Bug 247445 Useless/unreachable stale code from 1999 in GlobalWindowImpl::SetTimeoutOrInterval r=brendan sr=brendan